--- a/src/Components/Test.css
+++ b/src/Components/Test.css
@@ -17,7 +17,7 @@
 .main>div {
     display: flex;
     justify-content: space-between;
-    width: 25%;
+    max-width: 25%;
     gap: 8px;
     text-align: left;
 }
