--- a/src/Components/Test.css
+++ b/src/Components/Test.css
@@ -12,13 +12,12 @@
     align-items: center;
     gap: 1rem;
     min-height: 80vh;
-    margin: auto;
 }
 
 .main>div {
     display: flex;
     justify-content: space-between;
-    max-width: 30%;
+    min-width: 30%;
     gap: 8px;
     text-align: left;
 }
