--- a/src/Components/Test.css
+++ b/src/Components/Test.css
@@ -17,7 +17,8 @@
 .main>div {
     display: flex;
     justify-content: space-between;
-    min-width: 35%;
+    min-width: 30%;
+    max-width: 90%;
     gap: 8px;
     text-align: left;
     border: 1px solid red;
