--- a/src/Components/Test.css
+++ b/src/Components/Test.css
@@ -18,10 +18,10 @@
     display: flex;
     justify-content: space-between;
     min-width: 30%;
-    max-width: 90%;
+/*     max-width: 90%; */
     gap: 8px;
     text-align: left;
-    border: 1px solid red;
+/*     border: 1px solid red; */
 }
 
 button {
